Add Secondary Profile Provider