@@ -3,6 +3,7 @@ package com.matthewperiut.retroauth.skin;
 import com.matthewperiut.retroauth.RetroAuth;
 import com.matthewperiut.retroauth.profile.GameProfile;
 import com.matthewperiut.retroauth.profile.PlayerProfile;
+import com.matthewperiut.retroauth.profile.provider.MineToolsProfileProvider;
 import com.matthewperiut.retroauth.profile.provider.MojangProfileProvider;
 import com.matthewperiut.retroauth.profile.provider.ProfileProvider;
 import com.matthewperiut.retroauth.skin.data.PlayerEntitySkinData;
@@ -23,7 +24,7 @@ public class SkinService {
     private static final SkinService INSTANCE = new SkinService();
     private final ConcurrentMap<String, ReentrantLock> locks = new ConcurrentHashMap<>();
     private final Map<String, PlayerProfile> profiles = new HashMap<>();
-    private final List<ProfileProvider> providers = Collections.singletonList(new MojangProfileProvider());
+    private final List<ProfileProvider> providers = List.of(new MineToolsProfileProvider(), new MojangProfileProvider());
 
     public static SkinService getInstance() {
         return INSTANCE;
@@ -106,11 +107,11 @@ public class SkinService {
                             gameProfile.getModel() != null ? gameProfile.getModel() : "default"
                     );
 
-                    RetroAuth.LOGGER.info("Downloaded profile: {} ({})", gameProfile.getName(), gameProfile.getId());
+                    RetroAuth.LOGGER.info("[{}] Downloaded profile: {} ({})", provider.getProviderName(), gameProfile.getName(), gameProfile.getId());
                     profiles.put(name, playerProfile);
                 } catch (Exception e) {
-                    RetroAuth.LOGGER.error("Failed to map GameProfile to PlayerProfile for player {}: {}", name, e.getMessage());
-                    profiles.put(name, null); // Ensure fallback is used for the player
+                    RetroAuth.LOGGER.error("[{}] Failed to map GameProfile to PlayerProfile for player {}: {}", provider.getProviderName(), name, e.getMessage());
+                    continue;
                 }
 
                 return;
